--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,13 @@
 ---
-title: "Beau Lucas"
+title: "Welcome to my page!"
 ---
 
+-----
+
+This is my landing spot to share my current projects, interests, and resume.
+
 Currently working on: ***[Tidy ISLR](beaulucas.github.io/tidy_islr)***
+
+
+
+*This site was built with [RMarkdown Websites](https://rmarkdown.rstudio.com/rmarkdown_websites.html)*
