--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Welcome to my page!"
+title: "Reproducibility, modern data science workflows and statistical learning"
 ---
 
 -----
 
-This is my landing spot to share my current projects, interests, and resume.
+This is my landing spot to share current projects, interests, and other thoughts.
 
 Currently working on: ***[Tidy ISLR](https://beaulucas.github.io/tidy_islr)***
 
